[package]
name = "dna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bitstream-io = "1.7.0"
clap = { version = "4.3.17", features = ["derive"] }
humantime = "2.1.0"
rand = "0.8.5"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "net"] }
